--- a/Cat photo app.html
+++ b/Cat photo app.html
@@ -21,6 +21,7 @@
           <li>laser pointers</li>
           <li>lasagna</li>
         </ul>
+        <!-- TODO: Add link to cat photos -->
         <figure>
           <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
           <figcaption>Cats <em>love</em> lasagna.</figcaption>  
